# openclaw-audit

./: .gitignore  CALIBRATION.md  LICENSE  README.md  action.yml  pyproject.toml  scan.py
contracts/: AuditAttestation.sol  DEPLOY.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/test/: AuditAttestation.t.sol
examples/: github-workflow.yml
openclaw_audit/: __init__.py  report.py
openclaw_audit/detectors/: __init__.py  _fileutil.py  access_control_matrix.py  cross_func_reentrancy.py  donation_attack.py  erc4626_rounding.py  erc_compliance.py  fee_on_transfer.py  first_depositor_inflation.py  natspec_verifier.py  oracle_staleness.py  precision_loss.py  runner.py  tx_origin_auth.py  unchecked_call.py
